data/src/main/java/com/example/data/utilis/errors/UnAuthorizedError.kt
package com.example.data.utilis.errors

class UnAuthorizedError(
    override val message: String? = "UnAuthorized"
) : Throwable(message)
